syntax = "proto3";

option csharp_namespace = "Grinnink.Caching.Protos";

package cache;

service Cache {
	rpc ReadCache(CacheReadRequest) returns (CacheReadResponse);
	rpc WriteCache(CacheWriteRequest) returns (CacheWriteResponse);
}

message CacheReadRequest {
	string key = 1;
}

message CacheReadResponse {
	string value = 1;
}

message CacheWriteRequest {
	string key = 1;
	string value = 2;
}

message CacheWriteResponse {
	string message = 1;
}